<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dk.kraenhansen.beaconmap.CalibrationActivity" >

    <TextView
        android:id="@+id/introduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/calibrate_introduction" />

    <LinearLayout
        android:id="@+id/calibrateButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/introduction"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

    </LinearLayout>

    <TableLayout
        android:id="@+id/dataTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/introduction"
        android:layout_alignRight="@+id/introduction"
        android:layout_below="@+id/calibrateButtons" >

        <TableRow
            android:id="@+id/headerTableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/HeaderTextView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/header_corner"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/HeaderTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/header_unique_beacons"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/HeaderTextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/header_samples"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/estimateLocationsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dataTable"
        android:layout_centerHorizontal="true"
        android:text="@string/estimate_locations" />

    <Button
        android:id="@+id/saveCalibrationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/estimateLocationsButton"
        android:layout_centerHorizontal="true"
        android:text="@string/save_calibration_data" />

</RelativeLayout>